<resources>
    <string name="app_name">Firestore Project2</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="priority">Priority</string>
    <string name="result">Title : %1$s \n description : %2$s</string>

    <string name="success_saving_note">Note successfully saved</string>
    <string name="success_update_note">Successfully updated note</string>
    <string name="success_deletion_note">Successfully deleted note</string>
    <string name="success_delete_title">Successfully deleted title</string>
    <string name="success_delete_description">Successfully deleted description</string>

    <string name="error_saving_note">Something went wrong while saving the note</string>
    <string name="error_loading_note">Something went wrong while retrieving the datas.</string>
    <string name="error_loading_notes">Something went wring while loading the notes.</string>

    <string name="received_update">Update detected !</string>
    <string name="notification_channel_id" translatable="false">update_notification_channel</string>

    <string name="fill_all_fields">Please fill in all fields</string>

</resources>